--- a/Lesson 13 - Clima/pubspec.yaml
+++ b/Lesson 13 - Clima/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   geolocator: ^9.0.2
   permission_handler: ^10.2.0
   http: ^0.13.5
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
